--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,27 +1,53 @@
+
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
+
 <!-- Styles block -->
 
 {% block styles%}
     {{ super() }}
     <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
-        <!-- **************CONTENT BLOCK************* -->
-        {% block content %}
-         <!-- Popular movie -->
+<!-- Content block -->
+{% block content %}
+
+<div class="container">
+    <form>
+        <input type="text" name="movie_query" placeholder="Search for a Movie" class="form-control">
+        <input type="submit"  value="Submit" class="btn btn-default">
+    </form>
+
+</div>
+
+<div class="container">
+
+    <!-- Popular movie -->
+    <div class="row">
         <h3> Popular Movies</h3>
         <ul>
             {{ macro.displayMovieList(popular)}}
         </ul>
-        <!-- Upcoming movie  -->
+    </div>
+    <!-- Upcoming movie  -->
+    <div class="row">
+
         <h3> Upcoming Movies </h3>
         <ul>
             {{ macro.displayMovieList(upcoming)}}
         </ul>
-        <!-- Now showing movie -->
+    </div>
+
+    <!-- Now showing movie -->
+    <div class="row">
+
         <h3>Now Showing</h3>
         <ul>
             {{ macro.displayMovieList(now_showing)}}
         </ul>
-        {% endblock%}
-    
+    </div>
+
+</div>
+
+
+
+{% endblock%}
